Sun Jan  9 11:20:49 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* README: bit update.

Sat Jan  8 17:36:05 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_send): can now send an array, as
	  long as it does not include any non-sendable objects.

Sat Jan  8 10:26:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (ruby_vm_join): should return something.

Sat Jan  8 09:29:39 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (InitVM_Wormhole): rename to RubyVM::Channel because
	  k1o doesn't like the former name.  Now struct wormhole is a pure
	  C data structure, Channel is a Ruby class.

Fri Jan  7 15:43:16 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/fcntl/fcntl.c (InitVM_fcntl): MVM ready.

Fri Jan  7 15:40:30 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/socket/socket.c (InitVM_socket): MVM ready.

Thu Jan  6 21:18:25 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/etc/etc.c (InitVM_etc): MVM ready.

Thu Jan  6 21:07:48 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (gc_mark_children): weaken the criteria; It may be a bug
	  though.

Thu Jan  6 21:01:11 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_str): smart clean rewrite.  Same effect.

Wed Jan  5 19:48:02 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* dln.c (dln_load): initial support for MVM-capable extensions.
	  Extensions shall have InitVM_ prefixed initializer function to
	  be required from inside of a VM.  Only the main VM can require
	  old-fashioned extensions.

Wed Jan  5 17:04:41 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* dln.c (global_dln_handles): new global variable.

	* dln.c (Init_dln): new function to initialize above.

	* dmydln.c: ditto.

	* inits.c: ditto.

Wed Dec 22 10:53:03 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (rb_id2str): intervm strings shall not be returned from
	  this function because they are not ready to be used directly.